Basic WebAPI config

--- a/ecms.API/core/ecms.API/appsettings.Development.json
+++ b/ecms.API/core/ecms.API/appsettings.Development.json
@@ -1,8 +1,25 @@
 {
-  "Logging": {
-    "LogLevel": {
+  "ConnectionStrings": {
+    "Database": "Server=(localdb)\\mssqllocaldb; Database=EcmsDb"
+  },
+  "Serilog": {
+    "Using": [
+      "Serilog.Sinks.Console"
+    ],
+    "MinimumLevel": {
       "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
+      "Override": {
+        "Microsoft": "Information"
+      }
+    },
+    "WriteTo": [
+      { "Name": "Console" }
+    ],
+    "Enrich": [ "FromLogContext", "WithMachineName", "WithThreadId" ]
+  },
+  "BackgroundJobs": {
+    "Outbox": {
+      "Schedule": "0/15 * * * * *"
     }
   }
 }
