Config: Basic configuration for CleanArchitecture
- Add SharedKernal project with domain classes,
- Add configuration for test classes,
- Add all nugets needed for EF Core and CA working base,
- Add configuration for BlobStorage

--- a/ecms.API/core/ecms.API/ecms.API.csproj
+++ b/ecms.API/core/ecms.API/ecms.API.csproj
@@ -19,7 +19,8 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Extensions\" />
+    <ProjectReference Include="..\..\infrastructure\ecms.Infrastructure\ecms.Infrastructure.csproj" />
+    <ProjectReference Include="..\ecms.Application\ecms.Application.csproj" />
   </ItemGroup>
 
 </Project>
