--- a/ecms.API/SharedKernal/SharedKernal.csproj
+++ b/ecms.API/SharedKernal/SharedKernal.csproj
@@ -7,7 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\SharedKernal\SharedKernal.csproj" />
+    <PackageReference Include="MediatR.Contracts" Version="2.0.1" />
   </ItemGroup>
 
 </Project>
